[gd_scene load_steps=2 format=3 uid="uid://cxpvrtlh8044s"]

[ext_resource type="Script" path="res://myHurtBox.gd" id="1_e7anh"]

[node name="MyHurtBox" type="Area2D"]
script = ExtResource("1_e7anh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DisableTimer" type="Timer" parent="."]

[connection signal="timeout" from="DisableTimer" to="." method="_on_disable_timer_timeout"]
